force-app/zurich-base/main/default/objects/Propensity__c/Propensity__c.object-meta.xml
<CustomObject>
    <label>Propensión</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propensiones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>