force-app/zurich-base/main/default/objects/Propensity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Nombre del cliente para identificar a qué cliente se refiere la propensión</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account</relationshipLabel>
    <relationshipName>Propensiones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>