force-app/zurich-base/main/default/objects/Propensity__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Propensities</relationshipLabel>
    <relationshipName>Propensities</relationshipName>
    <type>Lookup</type>
</CustomField>