force-app/zurich-base/main/default/objects/Propensity__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Propensities</relationshipLabel>
    <relationshipName>Propensities</relationshipName>
    <type>Lookup</type>
</CustomField>