force-app/zurich-base/main/default/objects/Propensity__c/fields/Propensity__c.field-meta.xml
<CustomField>
    <fullName>Propensity__c</fullName>
    <description>Propensity type</description>
    <label>Propensity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>